# finterm

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  HOW_TO_USE_FINTERM.md  README.md  ROADMAP.md  TODO.md  package-lock.json  package.json
apps/api/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260310_000001_baseline_phase1_phase2.py  20260311_000002_phase8_broker_tables.py  20260311_000003_phase9_broker_execution_journal.py
apps/api/app/: main.py  seed.py
apps/api/app/api/: deps.py
apps/api/app/core/: config.py
apps/api/app/db/: __init__.py  models.py
apps/api/app/fixtures/: daily_brief.json  filings_feed.json  instruments.json  macro_events.json  macro_series.json  movers.json  quotes.json
apps/api/app/schemas/: alerts.py  broker.py  common.py  filings.py  journal.py  layout.py  macro.py  market.py  portfolio.py  prices.py  research.py  screening.py  watchlists.py  workspace.py
apps/api/app/services/: ai_notes.py  alerts.py  briefs.py  broker.py  broker_provider.py  cache.py  filings.py  filings_provider.py  indicators.py  journal.py  layout.py  macro.py  macro_provider.py  market.py  market_provider.py  portfolio.py  portfolio_math.py  research.py  research_qa.py  retrieval_provider.py  screening.py  watchlists.py
apps/api/app/tests/: conftest.py  test_ai_notes.py  test_alerts_routes.py  test_broker_routes.py  test_filings_macro_routes.py  test_indicators.py  test_journal_routes.py  test_market_provider_alpha_vantage.py  test_screening.py  (+6 more)
(+64 files in other folders)
