[project]
name = "finterm-api"
version = "0.1.0"
description = "FastAPI backend for finterm"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
plugins = []
exclude = ["alembic"]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
addopts = "-q"
